--- a/Styles.css
+++ b/Styles.css
@@ -10,7 +10,7 @@
 }
 header{
     height: 88px;
-    background-color: white;
+    background-color: #fff;
     position: fixed;
     display: flex;
     z-index: 2;
@@ -57,11 +57,11 @@ header p{
 .menubtns p{
     width: 148px;
     height: 28px;
-    border: 1px solid black;
+    border: 1px solid #000;
     border-radius: 25px;
     font-size: 14px;
     font-family: F37;
-    background-color: white;
+    background-color: #fff;
     text-align: center;
     padding-top: 10px;
     letter-spacing: -.32px;
@@ -81,8 +81,7 @@ header p{
     height: 625px;
     background-image: url(./images/firstpartbg.jpg);
     background-size: cover;
-    background-position-y: -19px;
-    /* box-shadow: 0px 0px 100px 0px black inset; */
+    background-position-y: -19px;  
     position: relative ;
     z-index: 1;
 }
@@ -105,7 +104,7 @@ header p{
     letter-spacing: -3.2px;
     margin-left: 62px;
     margin-top: 10px;
-    color: white;
+    color: #fff;
 }
 .signup{
     width: 171.3px;
@@ -120,7 +119,7 @@ header p{
     border-radius: 25px;
     font-size: 18px;
     font-family: F37;
-    background-color: white;
+    background-color: #fff;
     text-align: center;
     padding-top: 12px;
     letter-spacing: -.32px;
@@ -150,7 +149,7 @@ header p{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: #fff;
     left: 62px;
     bottom:59px;
     z-index: 2;
@@ -282,7 +281,7 @@ header p{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: #fff;
     left: 28px;
     bottom:30px;
     z-index: 1;
@@ -305,7 +304,7 @@ header p{
     box-shadow: 0px 0px 10px 3px rgb(209, 205, 205);
     width: 539px;
     height: 114px;
-    background-color: white;
+    background-color: #fff;
     border: none;
     border-radius: 70px;
     padding-left: 61px;
@@ -313,7 +312,7 @@ header p{
 }
 .arrow{
     position: absolute;
-    color: white;
+    color: #fff;
     font-size: 120px;
     bottom: 0;
     margin-bottom: -88px;
@@ -440,7 +439,7 @@ header p{
     line-height: 150px;
     letter-spacing: -.32px;
     font-weight: 400;
-    color: black;
+    color: #000;
 }
 #right{
     text-align: end;
@@ -493,7 +492,7 @@ header p{
     justify-content: center;
     align-items: center;
     background-color: #fff;
-    color: black;
+    color: #000;
     right: 28px;
     bottom:20px;
 }
@@ -554,7 +553,7 @@ header p{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1.5px solid black;
+    border: 1.5px solid #000;
     background-color: #fff;
     border-radius: 30px;
     transition: .5s;
@@ -602,7 +601,7 @@ footer h4{
 }
 .rides{
     height: 200px;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid #fff;
 }
 .text{
     width: 50%;
