--- a/Styles.css
+++ b/Styles.css
@@ -577,7 +577,7 @@ header p{
     font-weight: 400;
 }
 .were:hover{
-    transform: translateY(-px);
+    transform: translateY(-8px);
     box-shadow: 0px 0px 8px 3px grey;
     cursor: pointer;
     border-color: rgb(218, 73, 57);
